Fix player history being too short when empty

--- a/src/components/pages/ServerDetailsPage.scss
+++ b/src/components/pages/ServerDetailsPage.scss
@@ -155,6 +155,7 @@ div.content{
 }
 
 .history{
+  min-height: 2rem;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
